feat: modified Program.cd . docs: update readme

--- a/LinuxMonitor/LinuxMonitor/LinuxMonitor.csproj
+++ b/LinuxMonitor/LinuxMonitor/LinuxMonitor.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CXuesong.Shims.VisualBasic.Devices" Version="0.3.0" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.1" />
+  </ItemGroup>
+
 </Project>
