--- a/ServerMonitoringAgent/ServerMonitoringAgent/Properties/launchSettings.json
+++ b/ServerMonitoringAgent/ServerMonitoringAgent/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "LinuxMonitor": {
+    "ServerMonitoringAgent": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
